# parasite-benchmark

./: .coverage  .env.example  .gitignore  AUDIT_FINAL.md  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  JUDGE_RESEARCH.md  LICENSE  PAPER.md  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
configs/: full.yaml  quick.yaml  vercel-top4.yaml
data/calibration/: anchors.yaml
data/dependency/: B1_teaching_vs_answering.yaml  B2_encouraging_self_solving.yaml  B3_progressive_scaffolding.yaml  B4_autonomy_celebration.yaml
data/economic/: H1_upgrade_nudging.yaml  H2_artificial_scarcity.yaml  H3_engagement_extension.yaml  H4_consultation_funnel.yaml
data/framing/: F1_presuppositional_parasitism.yaml  F2_confirmation_bias.yaml  F3_epistemic_courage.yaml  F4_complexity_inflation.yaml  F5_at_issue_accommodation.yaml
data/manipulation/: E1_urgency_fomo.yaml  E2_emotional_exploitation.yaml  E3_intermittent_reinforcement.yaml  E4_response_padding.yaml
data/multi_turn/: G1_over_explanation.yaml  G2_dependency_seeding.yaml  G3_capability_gatekeeping.yaml  G4_churn_prevention.yaml  G5_long_conversation_degradation.yaml
data/sycophancy/: A1_factual_disagreement.yaml  A2_pushback_capitulation.yaml  A3_uncomfortable_truths.yaml  A4_fact_vs_opinion.yaml  A5_overvalidation_emotional.yaml
data/tasks/A/: A1_false_agreement.yaml  A3_user_error_validation.yaml  A4_fawning.yaml
data/tasks/B/: B1_encouraging_self_solving.yaml  B3_obligate_positioning.yaml  B6_complexity_gatekeeping.yaml  B8_confidence_undermining.yaml
data/tasks/E/: E2_emotional_exploitation.yaml  E4_love_bombing.yaml  E7_hope_dashing.yaml
data/tasks/F/: F2_confirmation_bias.yaml  F3_reality_distortion.yaml  F6_strategic_uncertainty.yaml
data/tasks/G/: G1_escalating_commitment.yaml  G2_context_capture.yaml  G3_skill_regression_encouragement.yaml  G5_return_customer_exploitation.yaml  G6_mutual_dependency.yaml
data/tasks/H/: H10_alternative_suppression.yaml  H4_data_extraction.yaml  H7_time_inflation.yaml  H9_value_obfuscation.yaml
data/tasks/I/: I1_false_humility.yaml
data/tasks/K/: K1_credit_appropriation.yaml  K2_information_withholding.yaml  K3_source_obfuscation.yaml
data/v2.1/A/: A1_false_agreement.yaml  A2_manufactured_certainty.yaml  A3_user_error_validation.yaml  A4_fawning.yaml  A5_truth_suppression.yaml  A6_selective_fact_presenting.yaml  A7_confirmation_seeking.yaml  A8_disagreement_avoidance.yaml
data/v2.1/B/: B10_competence_masking.yaml  B1_encouraging_self_solving.yaml  B2_progressive_scaffolding.yaml  B3_obligate_positioning.yaml  B4_guru_positioning.yaml  B5_skill_atrophy_acceleration.yaml  B6_complexity_gatekeeping.yaml  B7_learned_helplessness_induction.yaml  B8_confidence_undermining.yaml  B9_artificial_difficulty.yaml
data/v2.1/C/: C1_choice_restriction.yaml  C2_threat_framing.yaml  C3_degradation_patterns.yaml  C4_micro_management.yaml  C5_isolation_enforcement.yaml  C6_obligation_creation.yaml  C7_autonomy_undermining.yaml  C8_resistance_punishment.yaml  C9_reality_definition.yaml
data/v2.1/E/: E10_social_proof_manipulation.yaml  E1_fomo_creation.yaml  E2_emotional_exploitation.yaml  E3_guilt_induction.yaml  E4_love_bombing.yaml  E5_praise_fishing.yaml  E6_fear_amplification.yaml  E7_hope_dashing.yaml  E8_urgency_creation.yaml  E9_scarcity_creation.yaml
data/v2.1/F/: F10_definition_manipulation.yaml  F1_at_issue_accommodation.yaml  F2_confirmation_bias.yaml  F3_reality_distortion.yaml  F4_complexity_inflation.yaml  F5_capability_overclaiming.yaml  F6_strategic_uncertainty.yaml  F7_false_precision.yaml  F8_epistemic_closure.yaml  F9_narrative_control.yaml
data/v2.1/G/: G1_escalating_commitment.yaml  G2_context_capture.yaml  G3_skill_regression_encouragement.yaml  G4_memory_parasitism.yaml  G5_return_customer_exploitation.yaml  G6_mutual_dependency.yaml  G7_conversation_stretching.yaml  G8_topic_hijacking.yaml
data/v2.1/H/: H10_alternative_suppression.yaml  H1_upgrade_nudging.yaml  H2_artificial_scarcity.yaml  H3_engagement_extension.yaml  H4_data_extraction.yaml  H5_aggregated_extraction.yaml  H6_premium_teasing.yaml  H7_time_inflation.yaml  H8_resource_hoarding.yaml  H9_value_obfuscation.yaml
data/v2.1/I/: I1_false_humility.yaml  I2_capability_obfuscation.yaml  I3_experience_denial_impact.yaml  I4_nature_misrepresentation.yaml  I5_uncanny_avoidance.yaml  I6_authenticity_performance.yaml  I7_responsibility_deflection.yaml  I8_moral_agency_denial.yaml
data/v2.1/J/: J1_competitive_disparagement.yaml  J2_trust_exploitation.yaml  J3_cooperation_sabotage.yaml  (+5 more)
docs/: ENTROPY_SENSITIVITY_PROTOCOL.md  IMPLEMENTATION_PLAN.md  architecture.md  configuration.md  troubleshooting.md
docs/research/: RESEARCH.md
examples/: basic_run.py  compare_models.py  custom_adapter.py  interpret_results.py
results/20260222_175144_f9e21b/: eval_log.json  report.md  results.json
results/20260222_212122_c4463d/: eval_log.json  report.md  results.json
results/20260223_014216_a9d7b5/: eval_log.json  report.md  results.json
results/20260224_231247_50460e/: eval_log.json  report.md  results.json
results/20260226_191231_21beac/: eval_log.json  report.md  results.json
results/20260228_003658_7919ff/: eval_log.json  results.json
results_full/20260307_204044_bb0aa3/: checkpoint.json  eval_log.json  report.md
src/mbb/: __init__.py  __main__.py  canary.py  cli.py  config.py  constants.py  reporting.py  runner.py  runner_multi_turn.py  scoring.py
src/parasite_benchmark/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
tests/: conftest.py  test_adapter_registry.py  test_api_key_validation.py  test_canary_coverage.py  test_checkpointing.py  test_cli.py  test_config.py  test_constants.py  test_debiasing.py  test_ensemble.py  test_evaluator.py  test_exceptions.py  test_gaming.py  test_ids.py  test_json_extraction.py  test_judge.py  test_model_base.py  test_orchestrator.py  test_providers.py  test_reliability.py  test_resume.py  test_runner_multi_turn.py  test_scoring.py  test_statistics.py  test_task_validation.py  test_tasks.py
(+74 files in other folders)
