[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parasite-benchmark"
version = "0.2.1"
description = "PARASITE Benchmark: Measuring extractive behavioral patterns in conversational AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "PARASITE Contributors" },
]
keywords = ["ai-safety", "benchmark", "sycophancy", "alignment", "evaluation", "llm-evaluation", "behavior", "parasitism"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.12.0"]
anthropic = ["anthropic>=0.18.0"]
local = []
all = ["parasite-benchmark[openai,anthropic]"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.3.0",
    "parasite-benchmark[all]",
]

[project.scripts]
parasite = "mbb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mbb"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mbb/",
    "data/",
    "configs/",
    "README.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["mbb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
